update to countdown styles

--- a/public/index.html
+++ b/public/index.html
@@ -957,13 +957,19 @@
       <p class="h3">Our Next Event Is In:</p>
     </div>
   </div>
-  <div class="row">
-    <div class="col mx-auto p-3 text-center d-flex flex-column flex-sm-row align-items-center justify-content-center">
+  <div class="is-countdown row flex-row flex-wrap align-items-center justify-content-around">
+      <div class="col-3 col-sm-3 text-center d-flex flex-column align-items-center mx-auto">
       <span class="bg-dark text-white fw-bolder mx-1 fs-6 days">-</span><span>&nbsp;Days</span>
+      </div>
+      <div class="col-3 col-sm-3 text-center d-flex flex-column align-items-center mx-auto">
       <span class="bg-dark text-white fw-bolder mx-1 fs-6 hours">-</span><span>&nbsp;Hours</span>
+      </div>
+      <div class="col-3 col-sm-3 text-center d-flex flex-column align-items-center mx-auto">
       <span class="bg-dark text-white fw-bolder mx-1 fs-6 minutes">-</span><span>&nbsp;Minutes</span>
+      </div>
+      <div class="col-3 col-sm-3 text-center d-flex flex-column align-items-center mx-auto">
       <span class="bg-dark text-white fw-bolder mx-1 fs-6 seconds">-</span><span>&nbsp;Seconds</span>
-    </div>
+      </div>
   </div>
   <div class="row">
       <div class="col mx-auto p-3 text-center">
